Use normal font weight for non-hi-dpi screens and fix cropped image displaying in Safari
(fix #70 and partly #62)

--- a/sources/stylesheets/components/_menu-language.scss
+++ b/sources/stylesheets/components/_menu-language.scss
@@ -20,11 +20,14 @@
     margin-left: 19px;
     font-family: inherit;
     font-size: 13px;
-    font-weight: 100;
     border-color: rgba($color-black, .1);
     border-style: solid;
     border-width: 1px;
     border-radius: 12px;
+
+    @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 13/10), only screen and (min-resolution: 120dpi) {
+      font-weight: 100;
+    }
 
     &:hover {
       border-color: rgba($color-black, .3);
