--- a/sources/stylesheets/content/_blog-article.scss
+++ b/sources/stylesheets/content/_blog-article.scss
@@ -261,6 +261,18 @@
 .article-image {
   border: 0;
 
+  .publicmode & {
+    &.is-cropped {
+      position: absolute;
+      top: -100%;
+      right: -100%;
+      bottom: -100%;
+      left: -100%;
+      max-width: none;
+      margin: auto;
+    }
+  }
+
   .blog-listing-page & {
     display: block;
   }
@@ -295,7 +307,7 @@
   }
 
   .blog-listing-page & {
-    font-weight: 100;
+    font-weight: 400;
 
     @media screen and (max-width: $mobile) {
       font-size: 13px;
@@ -303,6 +315,10 @@
 
     @media screen and (min-width: $mobile + 1) {
       font-size: 18px;
+    }
+
+    @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 13/10), only screen and (min-resolution: 120dpi) {
+      font-weight: 100;
     }
   }
 
@@ -325,10 +341,13 @@
   display: block;
   margin-top: 4px;
   font-size: 18px;
-  font-weight: 100;
   color: rgba($color-black, .5);
   text-align: center;
   text-transform: uppercase;
+
+  @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 13/10), only screen and (min-resolution: 120dpi) {
+    font-weight: 100;
+  }
 }
 
 .article-body {
