--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -673,8 +673,12 @@ a {
 .voog-search-modal-result p {
   margin-top: 0;
   margin-bottom: 0;
-  font-weight: 100;
   line-height: 1.5;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-webkit-min-device-pixel-ratio: 1.25), only screen and (min-resolution: 120dpi) {
+  .voog-search-modal-result p {
+    font-weight: 100;
+  }
 }
 .voog-search-modal-result em {
   font-style: normal;
@@ -746,11 +750,15 @@ a {
   margin-left: 19px;
   font-family: inherit;
   font-size: 13px;
-  font-weight: 100;
   border-color: rgba(0, 0, 0, 0.1);
   border-style: solid;
   border-width: 1px;
   border-radius: 12px;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-webkit-min-device-pixel-ratio: 1.25), only screen and (min-resolution: 120dpi) {
+  .language-flags-disabled .menu-language-btn {
+    font-weight: 100;
+  }
 }
 .language-flags-disabled .menu-language-btn:hover {
   border-color: rgba(0, 0, 0, 0.3);
@@ -1407,6 +1415,15 @@ a {
 .article-image {
   border: 0;
 }
+.publicmode .article-image.is-cropped {
+  position: absolute;
+  top: -100%;
+  right: -100%;
+  bottom: -100%;
+  left: -100%;
+  max-width: none;
+  margin: auto;
+}
 .blog-listing-page .article-image {
   display: block;
 }
@@ -1442,7 +1459,7 @@ a {
   opacity: .8;
 }
 .blog-listing-page .article-title {
-  font-weight: 100;
+  font-weight: 400;
 }
 @media screen and (max-width: 640px) {
   .blog-listing-page .article-title {
@@ -1452,6 +1469,11 @@ a {
 @media screen and (min-width: 641px) {
   .blog-listing-page .article-title {
     font-size: 18px;
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-webkit-min-device-pixel-ratio: 1.25), only screen and (min-resolution: 120dpi) {
+  .blog-listing-page .article-title {
+    font-weight: 100;
   }
 }
 @media screen and (max-width: 640px) {
@@ -1472,10 +1494,14 @@ a {
   display: block;
   margin-top: 4px;
   font-size: 18px;
-  font-weight: 100;
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
   text-transform: uppercase;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-webkit-min-device-pixel-ratio: 1.25), only screen and (min-resolution: 120dpi) {
+  .article-date {
+    font-weight: 100;
+  }
 }
 
 .article-body {
@@ -1525,7 +1551,6 @@ a {
           hyphens: auto;
   word-break: break-word;
   word-wrap: break-word;
-  font-weight: 100;
   line-height: 1.7;
   color: rgba(0, 0, 0, 0.8);
 }
@@ -1533,6 +1558,11 @@ a {
   clear: both;
   content: "";
   display: table;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-webkit-min-device-pixel-ratio: 1.25), only screen and (min-resolution: 120dpi) {
+  .content-area {
+    font-weight: 100;
+  }
 }
 .site-header .content-area {
   text-transform: uppercase;
